8011990: TEST_BUG: java/util/logging/bundlesearch/ResourceBundleSearchTest.java fails on Windows Summary: Fix URL to reliably work on all platforms Reviewed-by: duke